[gd_scene load_steps=14 format=3 uid="uid://c3gdkslwlckvn"]

[ext_resource type="Script" uid="uid://cd6e3anjnxfnr" path="res://scripts/evidence.gd" id="1_14qdg"]
[ext_resource type="Texture2D" uid="uid://cwadcu777kp11" path="res://n_assets/Mini FX, Items & UI/Effects/Bright_Sparkle (16 x 16).png" id="2_s6s78"]
[ext_resource type="Texture2D" uid="uid://d2ajltttwnvee" path="res://n_assets/n_scenes/elements/evidenceAnime.png" id="3_s6s78"]
[ext_resource type="AudioStream" uid="uid://ce5oft8ibufcw" path="res://sounds/coletables/photo_click.ogg" id="4_wweys"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v34kk"]
atlas = ExtResource("2_s6s78")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcci3"]
atlas = ExtResource("2_s6s78")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcds0"]
atlas = ExtResource("2_s6s78")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_co5gy"]
atlas = ExtResource("2_s6s78")
region = Rect2(60, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdrm1"]
atlas = ExtResource("3_s6s78")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jfh5"]
atlas = ExtResource("3_s6s78")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pehme"]
atlas = ExtResource("3_s6s78")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hcci3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v34kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcci3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcds0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co5gy")
}],
"loop": false,
"name": &"collect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdrm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jfh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pehme")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uv4cb"]
size = Vector2(10, 10)

[node name="evidence" type="Node2D"]

[node name="evidence" type="Area2D" parent="."]
collision_layer = 512
script = ExtResource("1_14qdg")

[node name="amination_evidence" type="AnimatedSprite2D" parent="evidence"]
scale = Vector2(0.41666666, 0.39999998)
sprite_frames = SubResource("SpriteFrames_hcci3")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.9565333

[node name="CollisionShape2D" type="CollisionShape2D" parent="evidence"]
shape = SubResource("RectangleShape2D_uv4cb")

[node name="audio" type="AudioStreamPlayer2D" parent="evidence"]
stream = ExtResource("4_wweys")
volume_db = 3.029

[connection signal="body_shape_entered" from="evidence" to="evidence" method="_on_body_shape_entered"]
[connection signal="animation_finished" from="evidence/amination_evidence" to="evidence" method="_on_amination_coin_animation_finished"]
